--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ dependencies = [
     "Flask>=3.0.0",
     "flask-sqlalchemy>=3.0.0",
     "flask-login>=0.6.0",
+    "flask-migrate>=4.0.0",
+    "flask-session>=0.8.0",
     "argon2-cffi>=23.1.0",
     "psycopg2-binary",
     "python-ffmpeg-video-streaming==0.1.14",
