--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "argon2-cffi>=23.1.0",
     "psycopg2-binary",
     "python-ffmpeg-video-streaming==0.1.14",
+    "ldap3>=2.9.0",
 ]
 
 [project.urls]
