--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,9 @@ dependencies = [
     "psycopg2-binary",
     "python-ffmpeg-video-streaming==0.1.14",
     "ldap3>=2.9.0",
+    "authlib>=1.3.0",
+    "requests>=2.31.0",
+    "python3-saml>=1.16.0",
 ]
 
 [project.urls]
