Update workflow and README.md

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,22 +1,33 @@
 name: Build and Publish to PyPI
 
 on:
-  release:
-    types: [published]
+  push:
+    tags:
+      - 'v*'  # Triggered on version tags (e.g., v0.1.0, v1.0.0)
   workflow_dispatch:
     inputs:
-      publish_to_pypi:
-        description: 'Publish to PyPI (true/false)'
+      version:
+        description: 'Version tag to create (e.g., v0.1.0)'
         required: true
-        default: 'false'
-        type: boolean
+        type: string
 
 jobs:
   build:
     name: Build distribution
     runs-on: ubuntu-latest
+    outputs:
+      version: ${{ steps.get_version.outputs.version }}
     steps:
       - uses: actions/checkout@v4
+
+      - name: Get version from tag or input
+        id: get_version
+        run: |
+          if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
+            echo "version=${{ github.event.inputs.version }}" >> $GITHUB_OUTPUT
+          else
+            echo "version=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
+          fi
 
       - name: Install uv
         uses: astral-sh/setup-uv@v4
@@ -37,14 +48,13 @@ jobs:
 
   publish-to-pypi:
     name: Publish to PyPI
-    if: github.event_name == 'release' || (github.event_name == 'workflow_dispatch' && github.event.inputs.publish_to_pypi == 'true')
     needs: build
     runs-on: ubuntu-latest
     environment:
       name: pypi
       url: https://pypi.org/p/rtube
     permissions:
-      id-token: write  # Required for trusted publishing
+      id-token: write  # Required for OIDC trusted publishing
 
     steps:
       - name: Download all the dists
@@ -55,5 +65,60 @@ jobs:
 
       - name: Publish to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
+        # No password needed - uses OIDC trusted publishing
+
+  create-github-release:
+    name: Create GitHub Release
+    needs: [build, publish-to-pypi]
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Download all the dists
+        uses: actions/download-artifact@v4
         with:
-          password: ${{ secrets.PYPI_API_TOKEN }}
+          name: python-package-distributions
+          path: dist/
+
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v2
+        with:
+          tag_name: ${{ needs.build.outputs.version }}
+          name: Release ${{ needs.build.outputs.version }}
+          generate_release_notes: true
+          files: |
+            dist/*
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  rollback-on-failure:
+    name: Rollback on failure
+    needs: [build, publish-to-pypi, create-github-release]
+    runs-on: ubuntu-latest
+    if: failure()
+    permissions:
+      contents: write
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Delete GitHub Release if created
+        if: needs.create-github-release.result == 'success' && (needs.publish-to-pypi.result == 'failure')
+        run: |
+          gh release delete ${{ needs.build.outputs.version }} --yes || true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Log failure
+        run: |
+          echo "::error::Pipeline failed. Manual intervention may be required."
+          echo "Build result: ${{ needs.build.result }}"
+          echo "PyPI publish result: ${{ needs.publish-to-pypi.result }}"
+          echo "GitHub release result: ${{ needs.create-github-release.result }}"
+          echo ""
+          echo "If PyPI publish succeeded but GitHub release failed, consider:"
+          echo "1. Manually creating the GitHub release"
+          echo "2. Or yanking the PyPI release if needed"
