--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,13 +18,10 @@ dependencies = [
     "flask-login>=0.6.0",
     "flask-migrate>=4.0.0",
     "flask-session>=0.8.0",
+    "flask-oidc>=2.2.0",
     "argon2-cffi>=23.1.0",
     "psycopg2-binary",
     "python-ffmpeg-video-streaming==0.1.14",
-    "ldap3>=2.9.0",
-    "authlib>=1.3.0",
-    "requests>=2.31.0",
-    "python3-saml>=1.16.0",
     "python-dotenv>=1.2.1",
 ]
 
