--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,11 +15,12 @@ env:
   DOCKER_IMAGE: ${{ secrets.DOCKERHUB_USERNAME }}/rtube
 
 jobs:
-  build:
-    name: Build distribution
+  build-wheel:
+    name: Build Python wheel
     runs-on: ubuntu-latest
     outputs:
       version: ${{ steps.get_version.outputs.version }}
+      version_num: ${{ steps.get_version.outputs.version_num }}
     steps:
       - uses: actions/checkout@v4
 
@@ -27,10 +28,14 @@ jobs:
         id: get_version
         run: |
           if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
-            echo "version=${{ github.event.inputs.version }}" >> $GITHUB_OUTPUT
+            VERSION="${{ github.event.inputs.version }}"
           else
-            echo "version=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
+            VERSION="${GITHUB_REF#refs/tags/}"
           fi
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
+          # Remove 'v' prefix if present
+          VERSION_NUM=${VERSION#v}
+          echo "version_num=$VERSION_NUM" >> $GITHUB_OUTPUT
 
       - name: Install uv
         uses: astral-sh/setup-uv@v4
@@ -49,9 +54,35 @@ jobs:
           name: python-package-distributions
           path: dist/
 
+  build-docker:
+    name: Build Docker image
+    needs: build-wheel
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Download wheel
+        uses: actions/download-artifact@v4
+        with:
+          name: python-package-distributions
+          path: dist/
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build Docker image (test only)
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          push: false
+          load: true
+          tags: ${{ env.DOCKER_IMAGE }}:test
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
   publish-to-pypi:
     name: Publish to PyPI
-    needs: build
+    needs: [build-wheel, build-docker]
     runs-on: ubuntu-latest
     environment:
       name: pypi
@@ -70,13 +101,18 @@ jobs:
         uses: pypa/gh-action-pypi-publish@release/v1
         # No password needed - uses OIDC trusted publishing
 
-  build-and-push-docker:
-    name: Build and Push Docker Image
-    needs: build
+  push-docker:
+    name: Push Docker image to Docker Hub
+    needs: [build-wheel, build-docker]
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v4
+
+      - name: Download wheel
+        uses: actions/download-artifact@v4
+        with:
+          name: python-package-distributions
+          path: dist/
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -87,14 +123,6 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Extract version for tags
-        id: version
-        run: |
-          VERSION=${{ needs.build.outputs.version }}
-          # Remove 'v' prefix if present
-          VERSION_NUM=${VERSION#v}
-          echo "version_num=$VERSION_NUM" >> $GITHUB_OUTPUT
-
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
         with:
@@ -102,13 +130,13 @@ jobs:
           push: true
           tags: |
             ${{ env.DOCKER_IMAGE }}:latest
-            ${{ env.DOCKER_IMAGE }}:${{ steps.version.outputs.version_num }}
+            ${{ env.DOCKER_IMAGE }}:${{ needs.build-wheel.outputs.version_num }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
   create-github-release:
     name: Create GitHub Release
-    needs: [build, publish-to-pypi, build-and-push-docker]
+    needs: [build-wheel, publish-to-pypi, push-docker]
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -125,8 +153,8 @@ jobs:
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: ${{ needs.build.outputs.version }}
-          name: Release ${{ needs.build.outputs.version }}
+          tag_name: ${{ needs.build-wheel.outputs.version }}
+          name: Release ${{ needs.build-wheel.outputs.version }}
           generate_release_notes: true
           files: |
             dist/*
@@ -135,7 +163,7 @@ jobs:
 
   rollback-on-failure:
     name: Rollback on failure
-    needs: [build, publish-to-pypi, build-and-push-docker, create-github-release]
+    needs: [build-wheel, build-docker, publish-to-pypi, push-docker, create-github-release]
     runs-on: ubuntu-latest
     if: failure()
     permissions:
@@ -145,18 +173,19 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Delete GitHub Release if created
-        if: needs.create-github-release.result == 'success' && (needs.publish-to-pypi.result == 'failure' || needs.build-and-push-docker.result == 'failure')
+        if: needs.create-github-release.result == 'success' && (needs.publish-to-pypi.result == 'failure' || needs.push-docker.result == 'failure')
         run: |
-          gh release delete ${{ needs.build.outputs.version }} --yes || true
+          gh release delete ${{ needs.build-wheel.outputs.version }} --yes || true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Log failure
         run: |
           echo "::error::Pipeline failed. Manual intervention may be required."
-          echo "Build result: ${{ needs.build.result }}"
+          echo "Wheel build result: ${{ needs.build-wheel.result }}"
+          echo "Docker build result: ${{ needs.build-docker.result }}"
           echo "PyPI publish result: ${{ needs.publish-to-pypi.result }}"
-          echo "Docker build result: ${{ needs.build-and-push-docker.result }}"
+          echo "Docker push result: ${{ needs.push-docker.result }}"
           echo "GitHub release result: ${{ needs.create-github-release.result }}"
           echo ""
           echo "If some steps succeeded but others failed, consider:"
