--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -120,6 +120,12 @@ jobs:
       - name: Set up Python
         run: uv python install 3.11
 
+      - name: Install dependencies
+        run: uv sync --all-groups
+
+      - name: Run tests
+        run: uv run pytest tests/ -v
+
       - name: Build package
         run: uv build
 
