--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "psycopg2-binary",
     "python-ffmpeg-video-streaming==0.1.14",
     "python-dotenv>=1.2.1",
+    "gunicorn>=23.0.0",
 ]
 
 [project.urls]
