--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -73,17 +73,17 @@ jobs:
           # Update pyproject.toml
           sed -i "s/^version = \".*\"/version = \"${NEW_VERSION}\"/" pyproject.toml
 
-          # Commit changes
-          git add rtube/__version__.py pyproject.toml
-          git commit -m "Bump version to ${NEW_VERSION}"
-
-          # Create and push tag
-          git tag "v${NEW_VERSION}"
-          git push origin main --tags
-
-          # Set outputs
+          # Set outputs (commit and push deferred until publish succeeds)
           echo "version=v${NEW_VERSION}" >> $GITHUB_OUTPUT
           echo "version_num=${NEW_VERSION}" >> $GITHUB_OUTPUT
+
+      - name: Upload version changes
+        uses: actions/upload-artifact@v4
+        with:
+          name: version-bump-files
+          path: |
+            rtube/__version__.py
+            pyproject.toml
 
   build-wheel:
     name: Build Python wheel
@@ -96,8 +96,14 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          ref: ${{ needs.bump-version.outputs.version || github.ref }}
           fetch-depth: 0
+
+      - name: Download version bump files
+        if: needs.bump-version.result == 'success'
+        uses: actions/download-artifact@v4
+        with:
+          name: version-bump-files
+          path: .
 
       - name: Get version from tag or bump job
         id: get_version
@@ -141,8 +147,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-        with:
-          ref: ${{ needs.build-wheel.outputs.version || github.ref }}
 
       - name: Download wheel
         uses: actions/download-artifact@v4
@@ -190,8 +194,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-        with:
-          ref: ${{ needs.build-wheel.outputs.version || github.ref }}
 
       - name: Download wheel
         uses: actions/download-artifact@v4
@@ -219,15 +221,48 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
+  git-push:
+    name: Push version commit and tag
+    needs: [bump-version, build-wheel, publish-to-pypi, push-docker]
+    if: github.event_name == 'workflow_dispatch'
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Download version bump files
+        uses: actions/download-artifact@v4
+        with:
+          name: version-bump-files
+          path: .
+
+      - name: Configure git
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+
+      - name: Commit and push version bump
+        run: |
+          git add rtube/__version__.py pyproject.toml
+          git commit -m "Bump version to ${{ needs.bump-version.outputs.version_num }}"
+          git tag "${{ needs.bump-version.outputs.version }}"
+          git push origin main --tags
+
   create-github-release:
     name: Create GitHub Release
-    needs: [build-wheel, publish-to-pypi, push-docker]
+    needs: [build-wheel, publish-to-pypi, push-docker, git-push]
+    if: always() && needs.publish-to-pypi.result == 'success' && needs.push-docker.result == 'success' && (needs.git-push.result == 'success' || needs.git-push.result == 'skipped')
     runs-on: ubuntu-latest
     permissions:
       contents: write
 
     steps:
       - uses: actions/checkout@v4
+        with:
+          ref: ${{ needs.build-wheel.outputs.version }}
 
       - name: Download all the dists
         uses: actions/download-artifact@v4
@@ -248,7 +283,7 @@ jobs:
 
   rollback-on-failure:
     name: Rollback on failure
-    needs: [bump-version, build-wheel, build-docker, publish-to-pypi, push-docker, create-github-release]
+    needs: [bump-version, build-wheel, build-docker, publish-to-pypi, push-docker, git-push, create-github-release]
     runs-on: ubuntu-latest
     if: failure()
     permissions:
@@ -258,7 +293,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Delete GitHub Release if created
-        if: needs.create-github-release.result == 'success' && (needs.publish-to-pypi.result == 'failure' || needs.push-docker.result == 'failure')
+        if: needs.create-github-release.result == 'success'
         run: |
           gh release delete ${{ needs.build-wheel.outputs.version }} --yes || true
         env:
@@ -272,10 +307,10 @@ jobs:
           echo "Docker build result: ${{ needs.build-docker.result }}"
           echo "PyPI publish result: ${{ needs.publish-to-pypi.result }}"
           echo "Docker push result: ${{ needs.push-docker.result }}"
+          echo "Git push result: ${{ needs.git-push.result }}"
           echo "GitHub release result: ${{ needs.create-github-release.result }}"
           echo ""
           echo "If some steps succeeded but others failed, consider:"
           echo "1. Manually creating the GitHub release"
           echo "2. Or yanking the PyPI release if needed"
           echo "3. Or removing the Docker image tag if needed"
-          echo "4. Or reverting the version bump commit if needed"
